--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -85,12 +85,14 @@ services:
       - INFERENCE_MICROSERVICE_PORT=${INFERENCE_MICROSERVICE_PORT}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
-      - REDIS_DB_CELERY=${REDIS_DB_CELERY_INFERENCE_MICROSERVICE}
+      - REDIS_DB_CELERY_BROKER=${REDIS_DB_CELERY_BROKER_INFERENCE_MICROSERVICE}
+      - REDIS_DB_CELERY_BACKEND=${REDIS_DB_CELERY_BACKEND_INFERENCE_MICROSERVICE}
       - REDIS_DB_HISTORY=${REDIS_DB_HISTORY_INFERENCE_MICROSERVICE}
       - PREDICTION_HISTORY_LENGTH=${PREDICTION_HISTORY_LENGTH}
       - NORMAL_PREDICTION_THRESHOLD=${NORMAL_PREDICTION_THRESHOLD}
       - ABNORMAL_PREDICTION_THRESHOLD=${ABNORMAL_PREDICTION_THRESHOLD}
       - ABNORMAL_LABELS=${ABNORMAL_LABELS}
+      - ADAPTIVE_INFERENCE=${ADAPTIVE_INFERENCE}
       - CELERY_NUM_WORKERS=${CELERY_NUM_WORKERS}
       - CELERY_CONCURRENCY_LEVEL=${CELERY_CONCURRENCY_LEVEL}
       - CLOUD_API_URL=http://${CLOUD_API_HOST}:${CLOUD_API_PORT}/api/v1
@@ -114,12 +116,14 @@ services:
       - INFERENCE_MICROSERVICE_PORT=${INFERENCE_MICROSERVICE_PORT}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
-      - REDIS_DB_CELERY=${REDIS_DB_CELERY_INFERENCE_MICROSERVICE}
+      - REDIS_DB_CELERY_BROKER=${REDIS_DB_CELERY_BROKER_INFERENCE_MICROSERVICE}
+      - REDIS_DB_CELERY_BACKEND=${REDIS_DB_CELERY_BACKEND_INFERENCE_MICROSERVICE}
       - REDIS_DB_HISTORY=${REDIS_DB_HISTORY_INFERENCE_MICROSERVICE}
       - PREDICTION_HISTORY_LENGTH=${PREDICTION_HISTORY_LENGTH}
       - NORMAL_PREDICTION_THRESHOLD=${NORMAL_PREDICTION_THRESHOLD}
       - ABNORMAL_PREDICTION_THRESHOLD=${ABNORMAL_PREDICTION_THRESHOLD}
       - ABNORMAL_LABELS=${ABNORMAL_LABELS}
+      - ADAPTIVE_INFERENCE=${ADAPTIVE_INFERENCE}
       - WORKER_INDEX=1
       - CELERY_NUM_WORKERS=${CELERY_NUM_WORKERS}
       - CELERY_CONCURRENCY_LEVEL=${CELERY_CONCURRENCY_LEVEL}
